--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,19 @@
 .page {
   font-family: var(--font-geist-sans);
+  padding: 10px;
+}
+
+.header {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  gap: 10px;
+  background-color: #f9fafb;
+  margin-bottom: 10px;
+}
+
+.header h1 {
+  font-family: var(--font-geist-sans);
+  font-size: 24px;
+  color: #111;
 }
