--- a/src/components/inputSearch/styles.module.css
+++ b/src/components/inputSearch/styles.module.css
@@ -1,6 +1,12 @@
+.container {
+  display: flex;
+  gap: 10px;
+  height: 48px;
+  width: 100%;
+}
+
 .inputSearch {
   display: flex;
-  height: 48px;
   width: 100%;
   max-width: 400px;
   border-radius: 10px;
@@ -15,7 +21,15 @@
   flex: 1;
   border: none;
   outline: none;
-  color: #111;
   font-size: 16px;
   font-family: var(--font-geist-sans);
+}
+
+.button {
+  height: 48px;
+  width: 100px;
+  border-radius: 10px;
+  border: 1px solid #e69d9d;
+  background-color: #f9fafb;
+  cursor: pointer;
 }
