--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,13 +1,15 @@
 .page {
   font-family: var(--font-geist-sans);
-  padding: 10px;
+  padding: 0 10px;
   width: 100%;
+  height: 100%;
   max-width: 1100px;
   margin: 0 auto;
+  background-color: #DC0A2D;
 }
 
 .header {
-  background-color: #f9fafb;
+  background-color: #DC0A2D;
   padding: 20px 0;
   position: fixed;
   width: 100%;
@@ -33,11 +35,22 @@
 .header h1 {
   font-family: var(--font-geist-sans);
   font-size: 24px;
-  color: #111;
+  color: #f9fafb;
 }
 
 .content {
+  overflow-y: auto;
   margin-top: 150px;
+  background-color: #f9fafb;
+  height: 80%;
+  border-radius: 16px;
+}
+
+.noPokemon {
+  text-align: center;
+  color: #333;
+  font-size: 16px;
+  margin-left: 20px;
 }
 
 .buttonTop {
