--- a/src/components/inputSearch/styles.module.css
+++ b/src/components/inputSearch/styles.module.css
@@ -32,4 +32,8 @@
   border: 1px solid #e69d9d;
   background-color: #f9fafb;
   cursor: pointer;
+  font-family: var(--font-geist-sans);
+  font-size: 16px;
+  font-weight: 400;
+  color: #111;
 }
