--- a/src/components/inputSearch/styles.module.css
+++ b/src/components/inputSearch/styles.module.css
@@ -25,6 +25,12 @@
   font-family: var(--font-geist-sans);
 }
 
+.buttonClose {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
 .button {
   height: 48px;
   width: 100px;
