--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -40,9 +40,12 @@
 
 .content {
   overflow-y: auto;
-  margin-top: 150px;
   background-color: #f9fafb;
-  height: 80%;
+  height: 82%;
+  position: fixed;
+  top: 150px;
+  left: 10px;
+  right: 10px;
   border-radius: 16px;
 }
 
