--- a/src/components/list/styles.module.css
+++ b/src/components/list/styles.module.css
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   gap: 14px;
   align-items: center;
+  justify-content: space-evenly;
   padding: 10px;
 }
 
@@ -24,7 +25,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: end;
   padding: 10px;
   position: relative;
   border-width: 0;
