PKDex :: add option of the favorite

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -25,6 +25,12 @@
   padding: 0 10px;
 }
 
+.image {
+  width: 24px;
+  height: 24px;
+  color: #f9fafb;
+}
+
 .headerTitle {
   display: flex;
   align-items: center;
@@ -47,6 +53,8 @@
   left: 10px;
   right: 10px;
   border-radius: 16px;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .noPokemon {
