--- a/src/components/inputSearch/styles.module.css
+++ b/src/components/inputSearch/styles.module.css
@@ -6,7 +6,7 @@
   max-width: 500px;
   border-radius: 10px;
   background-color: #f9fafb;
-  padding-left: 10px;
+  padding: 0 10px;
   align-items: center;
 }
 
