--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -25,6 +25,12 @@
   padding: 0 10px;
 }
 
+.headerSearch {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .image {
   width: 24px;
   height: 24px;
@@ -53,7 +59,7 @@
   left: 10px;
   right: 10px;
   border-radius: 16px;
-  max-width: 1100px;
+  max-width: 1080px;
   margin: 0 auto;
 }
 
