--- a/src/components/loading/styles.module.css
+++ b/src/components/loading/styles.module.css
@@ -28,7 +28,7 @@
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
-  background-color: #3b82f6;
+  background-color: #f9fafb;
   animation: bounce 1s infinite ease-in-out;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .loadingText {
-  color: #6b7280;
+  color: #f9fafb;
   font-size: 0.875rem;
 }
 
